Adding handler for OpenAPI spec
